# pre-commit-prettier

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  script.py
.github/workflows/: main.yml
